k8s/user-management-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-api
  template:
    metadata:
      labels:
        app: user-management-api
    spec:
      containers:
      - name: user-management-api
        image: eventflex.azurecr.io/user-management-api:$(Build.BuildId)
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 8081
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
