k8s/user-management-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-api
spec:
  type: ClusterIP
  selector:
    app: user-management-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
